--- a/src/components/student/StudentStyles.module.css
+++ b/src/components/student/StudentStyles.module.css
@@ -1,4 +1,13 @@
 .colFilterBar {
     margin-top: 0.3em;
     margin-bottom: 0.3em;
+    padding: 0.5em;
+}
+
+.activeScrollFromFilterItem {
+    overflow-x: auto;
+}
+
+.divScrollFilterItem {
+    padding-left: 0.5em;
 }
