--- a/src/main/react/doctoral_registration/components/scrolllist/ScrollList.module.css
+++ b/src/main/react/doctoral_registration/components/scrolllist/ScrollList.module.css
@@ -21,3 +21,26 @@
     width: 100%;
     border-radius: 5px;
 }
+
+.invalid {
+    position: relative;
+    border-color: #dc3545 !important;
+}
+
+.valid {
+    border-color: #198754 !important;
+}
+
+.invalidImage {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 20px;
+}
+
+.invalidMessage {
+    width: 100%;
+    margin: 0.25rem;
+    font-size: 0.875em;
+    color: #dc3545;
+}
